exo5/svc-flask.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask
spec:
  selector:
    run: flask
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
