exo5/svc-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector:
    run: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
