exo5/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: flask
spec:
  host: flask-demo.apps.openshift.kakor.ovh
  port:
    targetPort: 5000
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: flask
    weight: 100
  wildcardPolicy: None
